# project_524

./: CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
tests/: test_project_524.py
