[tool.poetry]
name = "project524"
version = "0.1.0"
description = "Python Package practise"
authors = ["garg1234 <gargkaman7@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
